Logic for preserving existing placements

--- a/debug/spacing.html
+++ b/debug/spacing.html
@@ -17,61 +17,57 @@
 <script src='../dist/maplibre-gl-dev.js'></script>
 <script>
 
+var c = document.createElement('canvas');
+c.width = 24;
+c.height = 24;
+
+var ctx = c.getContext('2d');
+ctx.fillStyle = '#a00';
+ctx.strokeStyle = '#fff';
+ctx.lineWidth = 2;
+ctx.ellipse(12, 12, 11, 11, 0, 0, 2 * Math.PI);
+ctx.fill();
+ctx.stroke();
+
+var redCirc = ctx.getImageData(0, 0, 24, 24);
+
 var map = new maplibregl.Map({
     container: 'map',
     center: [-73.9900, 40.7707],
     zoom: 16,
+    hash: true,
     style: {
         'version': 8,
-        "glyphs": "https://demotiles.maplibre.org/font/{fontstack}/{range}.pbf",
+        'glyphs': 'https://demotiles.maplibre.org/font/{fontstack}/{range}.pbf',
         'sources': {
             'line': {
                 'type': 'geojson',
                 'data': {
-                    'type': 'Feature',
-                    'geometry': {
-                        "type": "LineString",
-                        "coordinates": [
-                            [-73.99203624883202,40.7716680962221],
-                            // [-73.99175998255471,40.771630055948776],
-                            // [-73.99173486743864,40.771630055948776],
-                            // [-73.99160929185834,40.77161103580394],
-                            // [-73.99148371627739,40.77159201565368],
-                            // [-73.99135814069707,40.77157299549799],
-                            // [-73.99118233488399,40.771553975336815],
-                            // [-73.99108187441976,40.771553975336815],
-                            // [-73.99085583837523,40.77151593499815],
-                            // [-73.99060468721397,40.77147789463771],
-                            // [-73.99037865116875,40.771458874448825],
-                            // [-73.99022796047241,40.77143985425499],
-                            // [-73.98995169419507,40.771401813850986],
-                            // [-73.98980100349807,40.77138279364087],
-                            // [-73.98954985233746,40.771344753204176],
-                            [-73.98919824071197,40.771287692508366],
-                            // [-73.98909778024706,40.771268672265535],
-                            // [-73.98879639885368,40.7712306317635],
-                            // [-73.98864570815734,40.771211611503844],
-                            // [-73.98836944188001,40.771154550693694],
-                            // [-73.98821875118365,40.77113553041275],
-                            // [-73.98796760002237,40.77107846953723],
-                            // [-73.98781690932537,40.771059449234514],
-                            // [-73.98766621862902,40.77104042892637],
-                            // [-73.98744018258384,40.77100238829368],
-                            // [-73.98723926165533,40.77096434763922],
-                            // [-73.98711368607437,40.770945327303366],
-                            // [-73.9869881104941,40.77090728661622],
-                            // [-73.98691276514589,40.77090728661622],
-                            // [-73.98681230468101,40.77088826626451],
-                            // [-73.98671184421676,40.770869245907306],
-                            // [-73.9866867291007,40.770869245907306],
-                            // [-73.98666161398464,40.770850225544706],
-                            // [-73.98663649886859,40.770850225544706],
-                            // [-73.98661138375253,40.770850225544706],
-                            // [-73.98658626863646,40.770850225544706],
-                            // [-73.98658626863646,40.77083120517665],
-                            [-73.9865611535204,40.77083120517665]
-                        ]
-                    }
+                    'type': 'FeatureCollection',
+                    'features': [
+                        {
+                            'type': 'Feature',
+                            'geometry': {
+                                'type': 'LineString',
+                                'coordinates': [
+                                    [-73.99203624883202, 40.7716680962221],
+                                    [-73.98919824071197, 40.771287692508366],
+                                    [-73.9865611535204, 40.77083120517665]
+                                ]
+                            }
+                        },
+                        // {
+                        //     'type': 'Feature',
+                        //     'geometry': {
+                        //         'type': 'LineString',
+                        //         'coordinates': [
+                        //             [-73.99203624883202,40.7717680962221],
+                        //             [-73.98919824071197,40.771387692508366],
+                        //             [-73.9865611535204,40.77093120517665]
+                        //         ]
+                        //     }
+                        // },
+                    ]
                 }
             },
             'point': {
@@ -80,7 +76,7 @@ var map = new maplibregl.Map({
                     'type': 'Feature',
                     'geometry': {
                         'type': 'Point',
-                        'coordinates': [-73.99118233488399,40.771553975336815]
+                        'coordinates': [-73.99118233488399, 40.771553975336815]
                     }
                 }
             }
@@ -107,9 +103,12 @@ var map = new maplibregl.Map({
                 'type': 'symbol',
                 'source': 'line',
                 'layout': {
+                    // 'icon-image': 'redCirc',
+                    // 'icon-text-fit': 'both',
                     'symbol-placement': 'line',
-                    'text-field': 'Lorem ipsum',
-                    'text-font': ['Open Sans Semibold']
+                    'text-field': 'X',
+                    'text-font': ['Open Sans Semibold'],
+                    'text-rotation-alignment': 'viewport'
                 },
                 'paint': {
                     'text-color': '#fff'
@@ -130,6 +129,13 @@ var map = new maplibregl.Map({
             }
         ]
     }
+});
+
+map.on('load', function () {
+    map.addImage('redCirc', redCirc, {
+        content: [6, 2, 18, 22]
+    });
+    map.collisionSymbolSpacing = true;
 });
 
 </script>
