--- a/debug/terrain.html
+++ b/debug/terrain.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>MapLibre GL JS debug page</title>
+   <title>MapLibre GL JS debug page for terrian</title>
    <meta charset='utf-8'>
    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
    <link rel='stylesheet' href='../dist/maplibre-gl.css' />
@@ -15,35 +15,57 @@
 <div id='map'></div>
 
 <script src='../dist/maplibre-gl-dev.js'></script>
-<script src='../debug/access_token_generated.js'></script>
 <script>
 
-fetch('https://static.maptoolkit.net/styles/toursprung/terrain.json').then((req) => req.json()).then((style) => {
-    style.sources.terrain = {
-        'type': 'raster-dem',
-        'tiles': ['https://vtc-cdn.maptoolkit.net/terrainrgb/{z}/{x}/{y}.webp'],
-        'encoding': 'mapbox',
-        'maxzoom': 14,
-        'minzoom': 4
-    };
-    style.terrain = {source: 'terrain', exaggeration: 0.33};
-
-    var map = window.map = new maplibregl.Map({
-        container: 'map',
-        zoom: 12.5,
-        center: [11.40416, 47.26475],
-        hash: true,
-        style,
-        maxZoom: 18,
-        maxPitch: 85
-    });
-
-    map.on('click', e => {
-        new maplibregl.Marker().setLngLat(e.lngLat).addTo(map);
-    });
-
-    map.addControl(new maplibregl.NavigationControl());
+var map = window.map = new maplibregl.Map({
+    container: 'map',
+    zoom: 13,
+    center: [35.6025, 32.8240],
+    hash: true,
+    style: {
+        version: 8,
+        sources: {
+            osm: {
+                type: 'raster',
+                tiles: ['https://a.tile.openstreetmap.org/{z}/{x}/{y}.png'],
+                tileSize: 256,
+                attribution: '&copy; OpenStreetMap Contributors',
+                maxzoom: 19
+            },
+            terrain: {
+                type: 'raster-dem',
+                url: 'put-your-terrain-tile-source-url-here',
+                tileSize: 256
+            },
+        },
+        layers: [
+            {
+                id: 'osm',
+                type: 'raster',
+                source: 'osm'
+            },
+            {
+                id: 'hills',
+                type: 'hillshade',
+                source: 'terrain',
+                layout: {'visibility': 'visible'},
+                paint: {'hillshade-exaggeration': 0.33}
+            }
+        ],
+        terrain: {
+            source: 'terrain',
+            exaggeration: 2
+        }
+    },
+    maxZoom: 18,
+    maxPitch: 85
 });
+
+map.on('click', e => {
+    new maplibregl.Marker().setLngLat(e.lngLat).addTo(map);
+});
+
+map.addControl(new maplibregl.NavigationControl());
 </script>
 </body>
 </html>
