--- a/debug/terrain.html
+++ b/debug/terrain.html
@@ -34,7 +34,7 @@ var map = window.map = new maplibregl.Map({
             },
             terrain: {
                 type: 'raster-dem',
-                url: 'put-your-terrain-tile-source-url-here',
+                url: 'https://api.maptiler.com/tiles/terrain-rgb/tiles.json?key=get_your_own_OpIi9ZULNHzrESv6T2vL',
                 tileSize: 256
             },
         },
