Calculate distance in pixel space

--- a/debug/spacing.html
+++ b/debug/spacing.html
@@ -136,6 +136,8 @@ map.on('load', function () {
         content: [6, 2, 18, 22]
     });
     map.collisionSymbolSpacing = true;
+    map.showCollisionBoxes = true;
+    map.showTileBoundaries = true;
 });
 
 </script>
