Fix terrain source button

--- a/debug/terrain.html
+++ b/debug/terrain.html
@@ -83,7 +83,7 @@
 
         map.addControl(
             new maplibregl.TerrainControl({
-                source: 'terrain',
+                source: 'terrainSource',
                 exaggeration: 1
             })
         );
