--- a/debug/polygon-opacity-per-layer.html
+++ b/debug/polygon-opacity-per-layer.html
@@ -33,6 +33,7 @@
                             'type': 'Feature',
                             'properties': {
                                 'color': 'red',
+                                'opacity': 0.5,
                                 'height': 0,
                                 'base_height': 0
                             },
@@ -52,6 +53,7 @@
                             'properties': {
                                 'color': 'rgba(0,255,0,255)',
                                 'height': 0,
+                                'opacity': 0.9,
                                 'base_height': 0
                             },
                             'geometry': {
@@ -76,7 +78,7 @@
             // 'fill-color': 'red',
             'fill-color': ['get', 'color'],
             // Make extrusions slightly opaque for see through indoor walls.
-            'fill-opacity': 0.5,
+            'fill-opacity': ['get', 'opacity'], //0.5,
             'fill-per-layer-opacity': true,
             'fill-outline-color': 'rgba(255,0,0,1)'
         };
