Setting up the basic framework of the elements, next we need to add the interactive handling

--- a/debug/index.html
+++ b/debug/index.html
@@ -22,8 +22,10 @@ new maplibregl.Map({
     zoom: 12.5,
     center: [-77.01866, 38.888],
     style: 'https://demotiles.maplibre.org/style.json',
-    hash: true
+    hash: true,
+    cooperativeGestures: true
 });
+console.log("INITZ MAP")
 
 </script>
 </body>
