Removed all logs

--- a/debug/index.html
+++ b/debug/index.html
@@ -22,10 +22,8 @@ new maplibregl.Map({
     zoom: 12.5,
     center: [-77.01866, 38.888],
     style: 'https://demotiles.maplibre.org/style.json',
-    hash: true,
-    cooperativeGestures: true
+    hash: true
 });
-console.log("INITZ MAP")
 
 </script>
 </body>
