--- a/debug/index.html
+++ b/debug/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
+<h1>This is a test of an inline map</h1>
 <div id='map'></div>
+<p>This is text underneath the map that we want to scroll down and read. This is text underneath the map that we want to scroll down and read. This is text underneath the map that we want to scroll down and read. This is text underneath the map that we want to scroll down and read. This is text underneath the map that we want to scroll down and read. This is text underneath the map that we want to scroll down and read. This is text underneath the map that we want to scroll down and read. This is text underneath the map that we want to scroll down and read. This is text underneath the map that we want to scroll down and read. This is text underneath the map that we want to scroll down and read. This is text underneath the map that we want to scroll down and read. </p>
 
 <script src='../dist/maplibre-gl-dev.js'></script>
 <script>
@@ -22,8 +24,11 @@ new maplibregl.Map({
     zoom: 12.5,
     center: [-77.01866, 38.888],
     style: 'https://demotiles.maplibre.org/style.json',
-    hash: true
+    hash: true,
+    cooperativeGestures: true,
+    //dragPan: false
 });
+console.log("INITZ MAP")
 
 </script>
 </body>
