enum for comp-op

--- a/debug/polygon-opacity-per-layer.html
+++ b/debug/polygon-opacity-per-layer.html
@@ -72,7 +72,7 @@
         const paint2d = {
             'fill-color': ['get', 'color'],
             'fill-opacity': ['get', 'opacity'],
-            'fill-opacity-per-geometry': false,
+            'fill-comp-op': 'normal',
             'fill-outline-color': 'rgba(0,0,0,0)'
         };
         map.addLayer({
