--- a/debug/custom-with-tile.html
+++ b/debug/custom-with-tile.html
@@ -47,10 +47,8 @@
             };
             const map = (window.map = new maplibregl.Map({
                 container: 'map',
-                zoom: 1.69,
-                center: [-9.4, -26.8],
-                bearing: 131,
-                pitch: 60,
+                zoom: 4,
+                center: [0, 0],
                 style: {
                     version: 8,
                     sources: {
@@ -67,10 +65,9 @@
                 },
                 hash: true,
             }));
-
-            class CustomRasterTile {
+            class TileSource {
                 constructor() {
-                    this.id = 'custom-rastertile';
+                    this.id = 'tile-source';
                     this.type = 'custom';
                     this.renderingMode = '3d';
                     this.source = 'gsi';
@@ -79,121 +76,140 @@
                 }
 
                 onAdd(map, gl) {
-                    this.map = map;
+                    const vertexSource = `
 
-                    this.camera = new THREE.Camera();
-                    this.scene = new THREE.Scene();
-                    // use the MapLibre GL JS map canvas for three.js
-                    this.renderer = new THREE.WebGLRenderer({
-                        canvas: map.getCanvas(),
-                        context: gl,
-                        antialias: true,
-                    });
+                    attribute vec3 aPos;
+                    attribute vec2 aTexCoord;
+                    uniform mat4 uMatrix;
+                    varying vec2 vTexCoord;
 
-                    this.renderer.autoClear = false;
+                    void main() {
+                        vTexCoord = aTexCoord;
+                        gl_Position = uMatrix * vec4(aPos, 1.0);
+                    }
+                    `;
 
-                    const geometry = new THREE.BufferGeometry();
-                    const vertices = new Float32Array([
-                        -1000000.0, -1000000.0, 1000000.0, 1000000.0,
-                        -1000000.0, 1000000.0, 1000000.0, 1000000.0, 1000000.0,
+                    const fragmentSource = `
+                    uniform sampler2D uTexture;
+                    varying vec2 vTexCoord;
+                    void main() {
+                        vec4 smpColor = texture2D(uTexture, vTexCoord);
+                        gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+                    }
+                    `;
+
+                    const vertexShader = gl.createShader(gl.VERTEX_SHADER);
+                    gl.shaderSource(vertexShader, vertexSource);
+                    gl.compileShader(vertexShader);
+                    const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
+                    gl.shaderSource(fragmentShader, fragmentSource);
+                    gl.compileShader(fragmentShader);
+
+                    this.program = gl.createProgram();
+                    gl.attachShader(this.program, vertexShader);
+                    gl.attachShader(this.program, fragmentShader);
+                    gl.linkProgram(this.program);
+                    gl.validateProgram(this.program);
+
+                    this.program.aPos = gl.getAttribLocation(
+                        this.program,
+                        'aPos',
+                    );
+                    this.program.uMatrix = gl.getUniformLocation(
+                        this.program,
+                        'uMatrix',
+                    );
+                    this.program.uTexture = gl.getUniformLocation(
+                        this.program,
+                        'uTexture',
+                    );
+                    this.program.aTexCoord = gl.getAttribLocation(
+                        this.program,
+                        'aTexCoord',
+                    );
+
+                    const x = 0.5 - 0.015;
+                    const y = 0.5 - 0.01;
+                    const z = 0.01;
+                    const d = 0.01;
+
+                    const vertexArray = new Float32Array([
+                        0.5, 0.5, 0, 0.51, 0.5, 0, 0.5, 0.51, 0,
                     ]);
-                    const uvs = new Float32Array([
-                        0.0, 0.0, 0.0, 1.0, 1.0, 1.0,
+                    const indexArray = new Uint16Array([0, 1, 2]);
+                    const texCoordArray = new Float32Array([
+                        0.0,
+                        0.0,
+                        1.0,
+                        0.0,
+                        ,
+                        0.0,
+                        1.0,
                     ]);
-                    geometry.addAttribute(
-                        'position',
-                        new THREE.BufferAttribute(vertices, 3),
-                    );
-                    geometry.addAttribute(
-                        'uv',
-                        new THREE.BufferAttribute(uvs, 2),
-                    );
-                    const material = new THREE.MeshBasicMaterial();
-                    this.triangle = new THREE.Mesh(geometry, this.material);
-                    this.scene.add(this.triangle);
 
-                    const boxGeom = new THREE.BoxGeometry(
-                        1000000,
-                        1000000,
-                        1000000,
+                    this.vertexBuffer = gl.createBuffer();
+                    gl.bindBuffer(gl.ARRAY_BUFFER, this.vertexBuffer);
+                    gl.bufferData(gl.ARRAY_BUFFER, vertexArray, gl.STATIC_DRAW);
+
+                    this.indexBuffer = gl.createBuffer();
+                    gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, this.indexBuffer);
+                    gl.bufferData(
+                        gl.ELEMENT_ARRAY_BUFFER,
+                        indexArray,
+                        gl.STATIC_DRAW,
                     );
-                    const boxMaterial = new THREE.MeshBasicMaterial();
-                    this.box = new THREE.Mesh(boxGeom, boxMaterial);
-                    this.scene.add(this.box);
+
+                    this.texCoordBuffer = gl.createBuffer();
+                    gl.bindBuffer(gl.ARRAY_BUFFER, this.texCoordBuffer);
+                    gl.bufferData(
+                        gl.ARRAY_BUFFER,
+                        texCoordArray,
+                        gl.STATIC_DRAW,
+                    );
+
+                    // bind vertex
+                    gl.bindBuffer(gl.ARRAY_BUFFER, this.vertexBuffer);
+                    gl.enableVertexAttribArray(this.program.a_pos);
+                    gl.vertexAttribPointer(
+                        this.program.aPos,
+                        3,
+                        gl.FLOAT,
+                        false,
+                        0,
+                        0,
+                    );
+
+                    // bind texCoord
+                    gl.bindBuffer(gl.ARRAY_BUFFER, this.texCoordBuffer);
+                    gl.enableVertexAttribArray(this.program.a_texCoord);
+                    gl.vertexAttribPointer(
+                        this.program.aTexCoord,
+                        2,
+                        gl.FLOAT,
+                        false,
+                        0,
+                        0,
+                    );
                 }
 
                 render(gl, matrix, tiles) {
-                    // WebGLTexture -> THREE.texture
-                    const threetexture = new THREE.Texture();
-                    const texProps = this.renderer.properties.get(threetexture);
-                    texProps.__webglTexture = tiles[0].texture.texture;
-                    const material = new THREE.MeshBasicMaterial({
-                        map: threetexture,
-                        side: THREE.DoubleSide,
-                    });
-                    this.triangle.material = material;
+                    if (tiles.length === 0) return;
+                    console.log(tiles);
+                    gl.useProgram(this.program);
 
-                    // WebGLTexture -> THREE.texture
-                    const boxTexs = [
-                        new THREE.Texture(),
-                        new THREE.Texture(),
-                        new THREE.Texture(),
-                        new THREE.Texture(),
-                        new THREE.Texture(),
-                        new THREE.Texture(),
-                    ];
-                    boxTexs.forEach((tex, idx) => {
-                        const boxTexProps = this.renderer.properties.get(tex);
-                        boxTexProps.__webglTexture = tiles[idx].texture.texture;
-                    });
-                    const boxMaterial = boxTexs.map((tex) => {
-                        return new THREE.MeshBasicMaterial({
-                            map: tex,
-                            side: THREE.DoubleSide,
-                        });
-                    });
-                    this.box.material = boxMaterial;
+                    // bind texture
+                    const { texture } = tiles[0];
+                    gl.bindTexture(gl.TEXTURE_2D, texture.texture);
+                    gl.uniform1i(this.program.uTexture, 0);
 
-                    const rotationX = new THREE.Matrix4().makeRotationAxis(
-                        new THREE.Vector3(1, 0, 0),
-                        modelTransform.rotateX,
-                    );
-                    const rotationY = new THREE.Matrix4().makeRotationAxis(
-                        new THREE.Vector3(0, 1, 0),
-                        modelTransform.rotateY,
-                    );
-                    const rotationZ = new THREE.Matrix4().makeRotationAxis(
-                        new THREE.Vector3(0, 0, 1),
-                        modelTransform.rotateZ,
-                    );
+                    gl.uniformMatrix4fv(this.program.uMatrix, false, matrix);
 
-                    const m = new THREE.Matrix4().fromArray(matrix);
-                    const l = new THREE.Matrix4()
-                        .makeTranslation(
-                            modelTransform.translateX,
-                            modelTransform.translateY,
-                            modelTransform.translateZ,
-                        )
-                        .scale(
-                            new THREE.Vector3(
-                                modelTransform.scale,
-                                -modelTransform.scale,
-                                modelTransform.scale,
-                            ),
-                        )
-                        .multiply(rotationX)
-                        .multiply(rotationY)
-                        .multiply(rotationZ);
-
-                    this.camera.projectionMatrix = m.multiply(l);
-                    this.renderer.state.reset();
-                    this.renderer.render(this.scene, this.camera);
-                    this.map.triggerRepaint();
+                    gl.drawElements(gl.TRIANGLES, 3, gl.UNSIGNED_SHORT, 0);
                 }
             }
 
             map.on('load', function () {
-                map.addLayer(new CustomRasterTile());
+                map.addLayer(new TileSource());
             });
         </script>
     </body>
