--- a/debug/custom-with-tile.html
+++ b/debug/custom-with-tile.html
@@ -24,44 +24,29 @@
         <script src="../dist/maplibre-gl-dev.js"></script>
         <script src="https://unpkg.com/three@0.106.2/build/three.min.js"></script>
         <script>
-            const modelOrigin = [0, 0];
-            const modelAltitude = 1000000;
-            const modelRotate = [Math.PI / 2, 0, 0];
-
-            const modelAsMercatorCoordinate =
-                maplibregl.MercatorCoordinate.fromLngLat(
-                    modelOrigin,
-                    modelAltitude,
-                );
-            const modelTransform = {
-                translateX: modelAsMercatorCoordinate.x,
-                translateY: modelAsMercatorCoordinate.y,
-                translateZ: modelAsMercatorCoordinate.z,
-                rotateX: modelRotate[0],
-                rotateY: modelRotate[1],
-                rotateZ: modelRotate[2],
-                /* Since our 3D model is in real world meters, a scale transform needs to be
-                 * applied since the CustomLayerInterface expects units in MercatorCoordinates.
-                 */
-                scale: modelAsMercatorCoordinate.meterInMercatorCoordinateUnits(),
-            };
             const map = (window.map = new maplibregl.Map({
                 container: 'map',
-                zoom: 4,
-                center: [0, 0],
+                zoom: 16,
+                center: [13.418056, 52.499167],
                 style: {
                     version: 8,
                     sources: {
-                        gsi: {
+                        osm: {
                             type: 'raster',
                             tiles: [
-                                'https://cyberjapandata.gsi.go.jp/xyz/seamlessphoto/{z}/{x}/{y}.jpg',
+                                'http://tile.openstreetmap.org/{z}/{x}/{y}.png',
                             ],
                             attribution:
                                 '<a href="https://maps.gsi.go.jp/development/ichiran.html">Geospatial Information Authority of Japan</a>',
                         },
                     },
-                    layers: [],
+                    layers: [
+                        {
+                            id: 'osm',
+                            source: 'osm',
+                            type: 'raster',
+                        },
+                    ],
                 },
                 hash: true,
             }));
@@ -70,9 +55,9 @@
                     this.id = 'tile-source';
                     this.type = 'custom';
                     this.renderingMode = '3d';
-                    this.source = 'gsi';
+                    this.source = 'osm';
                     this.minzoom = 2;
-                    this.maxzoom = 5;
+                    this.maxzoom = 17;
                 }
 
                 onAdd(map, gl) {
@@ -84,17 +69,17 @@
                     varying vec2 vTexCoord;
 
                     void main() {
-                        vTexCoord = aTexCoord;
                         gl_Position = uMatrix * vec4(aPos, 1.0);
+                        vTexCoord = aTexCoord;
                     }
                     `;
 
                     const fragmentSource = `
+                    precision mediump float;
                     uniform sampler2D uTexture;
                     varying vec2 vTexCoord;
                     void main() {
-                        vec4 smpColor = texture2D(uTexture, vTexCoord);
-                        gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+                        gl_FragColor = texture2D(uTexture, vTexCoord);
                     }
                     `;
 
@@ -109,56 +94,48 @@
                     gl.attachShader(this.program, vertexShader);
                     gl.attachShader(this.program, fragmentShader);
                     gl.linkProgram(this.program);
-                    gl.validateProgram(this.program);
 
-                    this.program.aPos = gl.getAttribLocation(
-                        this.program,
-                        'aPos',
-                    );
-                    this.program.uMatrix = gl.getUniformLocation(
-                        this.program,
-                        'uMatrix',
-                    );
-                    this.program.uTexture = gl.getUniformLocation(
-                        this.program,
-                        'uTexture',
-                    );
-                    this.program.aTexCoord = gl.getAttribLocation(
+                    this.aPos = gl.getAttribLocation(this.program, 'aPos');
+                    this.aTexCoord = gl.getAttribLocation(
                         this.program,
                         'aTexCoord',
                     );
+                    this.uMatrix = gl.getUniformLocation(
+                        this.program,
+                        'uMatrix',
+                    );
+                    this.uTexture = gl.getUniformLocation(
+                        this.program,
+                        'uTexture',
+                    );
 
-                    const x = 0.5 - 0.015;
-                    const y = 0.5 - 0.01;
-                    const z = 0.01;
-                    const d = 0.01;
-
+                    const { x, y } = maplibregl.MercatorCoordinate.fromLngLat({
+                        lng: 13.418056,
+                        lat: 52.499167,
+                    });
                     const vertexArray = new Float32Array([
-                        0.5, 0.5, 0, 0.51, 0.5, 0, 0.5, 0.51, 0,
+                        x - 0.00001,
+                        y,
+                        0,
+                        x + 0.00001,
+                        y,
+                        0,
+                        x,
+                        y + 0.00001,
+                        0,
                     ]);
-                    const indexArray = new Uint16Array([0, 1, 2]);
                     const texCoordArray = new Float32Array([
-                        0.0,
-                        0.0,
-                        1.0,
-                        0.0,
-                        ,
-                        0.0,
-                        1.0,
+                        0.0, 0.0, 1.0, 0.0, 0.0, 1.0,
                     ]);
 
+                    // bind vertex
                     this.vertexBuffer = gl.createBuffer();
                     gl.bindBuffer(gl.ARRAY_BUFFER, this.vertexBuffer);
                     gl.bufferData(gl.ARRAY_BUFFER, vertexArray, gl.STATIC_DRAW);
+                    gl.enableVertexAttribArray(this.aPos);
+                    gl.vertexAttribPointer(this.aPos, 3, gl.FLOAT, false, 0, 0);
 
-                    this.indexBuffer = gl.createBuffer();
-                    gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, this.indexBuffer);
-                    gl.bufferData(
-                        gl.ELEMENT_ARRAY_BUFFER,
-                        indexArray,
-                        gl.STATIC_DRAW,
-                    );
-
+                    // bind texCoord
                     this.texCoordBuffer = gl.createBuffer();
                     gl.bindBuffer(gl.ARRAY_BUFFER, this.texCoordBuffer);
                     gl.bufferData(
@@ -166,24 +143,9 @@
                         texCoordArray,
                         gl.STATIC_DRAW,
                     );
-
-                    // bind vertex
-                    gl.bindBuffer(gl.ARRAY_BUFFER, this.vertexBuffer);
-                    gl.enableVertexAttribArray(this.program.a_pos);
+                    gl.enableVertexAttribArray(this.aTexCoord);
                     gl.vertexAttribPointer(
-                        this.program.aPos,
-                        3,
-                        gl.FLOAT,
-                        false,
-                        0,
-                        0,
-                    );
-
-                    // bind texCoord
-                    gl.bindBuffer(gl.ARRAY_BUFFER, this.texCoordBuffer);
-                    gl.enableVertexAttribArray(this.program.a_texCoord);
-                    gl.vertexAttribPointer(
-                        this.program.aTexCoord,
+                        this.aTexCoord,
                         2,
                         gl.FLOAT,
                         false,
@@ -200,10 +162,10 @@
                     // bind texture
                     const { texture } = tiles[0];
                     gl.bindTexture(gl.TEXTURE_2D, texture.texture);
-                    gl.uniform1i(this.program.uTexture, 0);
+                    gl.uniform1i(this.uTexture, 0);
 
-                    gl.uniformMatrix4fv(this.program.uMatrix, false, matrix);
-
+                    // render
+                    gl.uniformMatrix4fv(this.uMatrix, false, matrix);
                     gl.drawElements(gl.TRIANGLES, 3, gl.UNSIGNED_SHORT, 0);
                 }
             }
