--- a/debug/setstyle.html
+++ b/debug/setstyle.html
@@ -15,12 +15,12 @@
 <div id='map'></div>
 
 <script src='../dist/maplibre-gl-dev.js'></script>
-<script src='/debug/dark-v9.js'></script>
-<script src='/debug/light-v9.js'></script>
+<script src='/debug/dark-demotiles.js'></script>
+<script src='/debug/light-demotiles.js'></script>
 <script>
-// these are set in dark-v9.js and light-v9.js
-var dark = window.darkv9;
-var light = window.lightv9;
+// these are set in dark-demotiles.js and light-demotiles.js
+var dark = window.darkdemotiles;
+var light = window.lightdemotiles;
 
 var style = dark;
 var map = window.map = new maplibregl.Map({
