Fixes for location in some pages

--- a/test/debug-pages/csp-static.html
+++ b/test/debug-pages/csp-static.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' 'nonce-app-js'; style-src 'self' 'nonce-app-css'; img-src data: blob: ; connect-src https://*.mapbox.com">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='../dist/maplibre-gl.css' />
+    <link rel='stylesheet' href='../../dist/maplibre-gl.css' />
     <style nonce="app-css">
         body { margin: 0; padding: 0; }
         html, body, #map { height: 100%; }
