--- a/test/debug-pages/7517.html
+++ b/test/debug-pages/7517.html
@@ -5,7 +5,7 @@
     <title>MapLibre GL JS debug page</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='../dist/maplibre-gl.css' />
+    <link rel='stylesheet' href='../../dist/maplibre-gl.css' />
     <style>
         body {
             margin: 0;
@@ -23,7 +23,7 @@
 <body>
     <div id='map'></div>
 
-    <script src='../dist/maplibre-gl-dev.js'></script>
+    <script src='../../dist/maplibre-gl-dev.js'></script>
     <script>
         const data = {
             'type': 'Feature',
