--- a/test/debug-pages/animate.html
+++ b/test/debug-pages/animate.html
@@ -4,7 +4,7 @@
     <title>MapLibre GL JS debug page</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='../dist/maplibre-gl.css' />
+    <link rel='stylesheet' href='../../dist/maplibre-gl.css' />
     <style>
         #map { width: 1200px; height: 800px;  }
     </style>
@@ -13,7 +13,7 @@
 <body>
 <div id='map'></div>
 
-<script src='../dist/maplibre-gl-dev.js'></script>
+<script src='../../dist/maplibre-gl-dev.js'></script>
 <script>
 
 var map = window.map = new maplibregl.Map({
