--- a/test/debug-pages/cache_api.html
+++ b/test/debug-pages/cache_api.html
@@ -4,7 +4,7 @@
     <title>MapLibre GL JS debug page</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='../dist/maplibre-gl.css' />
+    <link rel='stylesheet' href='../../dist/maplibre-gl.css' />
     <style>
         body { margin: 0; padding: 0; }
         html, body, #map { width: 500px; height: 500px; }
@@ -17,7 +17,7 @@
 </div>
 <div id='map'></div>
 
-<script src='../dist/maplibre-gl-dev.js'></script>
+<script src='../../dist/maplibre-gl-dev.js'></script>
 <script>
 
 const CACHE_NAME = 'mapbox-tiles';
