--- a/test/debug-pages/events.html
+++ b/test/debug-pages/events.html
@@ -4,7 +4,7 @@
 <title>MapLibre GL JS debug page</title>
 <meta charset='utf-8'>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel='stylesheet' href='../dist/maplibre-gl.css' />
+<link rel='stylesheet' href='../../dist/maplibre-gl.css' />
 <style>
 
 body {
@@ -94,7 +94,7 @@ html, body, #map {
 
 <div id='console' class='hide'></div>
 
-<script src='../dist/maplibre-gl-dev.js'></script>
+<script src='../../dist/maplibre-gl-dev.js'></script>
 
 <script>
 var map = window.map = new maplibregl.Map({
