--- a/test/debug-pages/multiple.html
+++ b/test/debug-pages/multiple.html
@@ -4,7 +4,7 @@
     <title>MapLibre GL JS debug page</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='../dist/maplibre-gl.css' />
+    <link rel='stylesheet' href='../../dist/maplibre-gl.css' />
     <style>
         body { margin: 0; padding: 0; }
         .map { width: 300px; height: 300px; display: block; float: left; margin: 5px; }
@@ -17,7 +17,7 @@
 <div class='map'></div>
 <div class='map'></div>
 
-<script src='../dist/maplibre-gl-dev.js'></script>
+<script src='../../dist/maplibre-gl-dev.js'></script>
 <script>
 
 var style = {
