--- a/test/debug-pages/rtl.html
+++ b/test/debug-pages/rtl.html
@@ -30,8 +30,8 @@
 <script src='/dist/maplibre-gl-dev.js'></script>
 <script>
 // badPluginURL allows us to simulate a NetworkError that we can recover from by retrying plugin loading
-var badPluginURL = 'http://localhost:9966/debug/2762.html';
-var goodPluginURL = 'https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-rtl-text/v0.2.0/mapbox-gl-rtl-text.js';
+var badPluginURL = 'http://localhost:9966/test/debug-pages/2762.html';
+var goodPluginURL = 'https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.js';
 new maplibregl.Map({
     container: 'map',
     zoom: 16.5,
