--- a/test/debug-pages/shield-rotation.html
+++ b/test/debug-pages/shield-rotation.html
@@ -5,7 +5,7 @@
     <title>MapLibre GL JS debug page</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='../dist/maplibre-gl.css' />
+    <link rel='stylesheet' href='../../dist/maplibre-gl.css' />
     <style>
         body {
             margin: 0;
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <script src='../dist/maplibre-gl-dev.js'></script>
+    <script src='../../dist/maplibre-gl-dev.js'></script>
     <script>
         var map = window.map = new maplibregl.Map({
             container: 'map',
