--- a/test/debug-pages/tinysdf.html
+++ b/test/debug-pages/tinysdf.html
@@ -4,7 +4,7 @@
     <title>MapLibre GL JS debug page</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='../dist/maplibre-gl.css' />
+    <link rel='stylesheet' href='../../dist/maplibre-gl.css' />
     <style>
         body { margin: 0; padding: 0; }
         html, body, #originalMap, #newMap { height: 100%; }
@@ -47,7 +47,7 @@
     <label><input id='show-overdraw-checkbox' type='checkbox'> overdraw debug</label><br />
 </div>
 
-<script src='../dist/maplibre-gl-dev.js'></script>
+<script src='../../dist/maplibre-gl-dev.js'></script>
 <script>
 
 function localizeLayers(map) {
