--- a/test/debug-pages/video.html
+++ b/test/debug-pages/video.html
@@ -4,7 +4,7 @@
     <title>MapLibre GL JS debug page</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' href='../dist/maplibre-gl.css' />
+    <link rel='stylesheet' href='../../dist/maplibre-gl.css' />
     <link href='https://www.mapbox.com/base/latest/base.css' rel='stylesheet' />
     <style>
         body { margin: 0; padding: 0; }
@@ -18,7 +18,7 @@
 <div class='pin-bottom pad1 z100 col12 bg-white' style='background:white'>
     <input class="timeslider col12 fr" type="range" value="0" min="0" max="45" step="0.1" id="timeslider">
 </div>
-<script src='../dist/maplibre-gl-dev.js'></script>
+<script src='../../dist/maplibre-gl-dev.js'></script>
 <script>
 
 var videoStyle = {
