--- a/debug/custom-with-tile.html
+++ b/debug/custom-with-tile.html
@@ -37,7 +37,7 @@
                                 'http://tile.openstreetmap.org/{z}/{x}/{y}.png',
                             ],
                             attribution:
-                                '<a href="https://maps.gsi.go.jp/development/ichiran.html">Geospatial Information Authority of Japan</a>',
+                                '© OpenStreetMap contributors',
                         },
                     },
                     layers: [
