cover edgecase and more tests for calculateCameraOptionsFromTo

--- a/test/debug-pages/route.html
+++ b/test/debug-pages/route.html
@@ -119,6 +119,8 @@
       let start = null;
       const playtime = 30000;
       const route = turf.lineString(coordinates);
+
+      var disableRoute = false;
       const animate = () => {
     start = start || Date.now();
 
@@ -140,9 +142,8 @@
 
     map.easeTo(map.calculateCameraOptionsFromTo(camera.coord.toLngLat(), camera.altitude, lngLat));
 
-    if (progress < playtime) requestAnimationFrame(animate);
+    if (progress < playtime && !disableRoute) requestAnimationFrame(animate);
 };
-
       map.on('load', () => {
           // calculate camera startpoint
           //  - compute the direction of the first quater of the route
@@ -154,6 +155,7 @@
           camera.coord = new maplibregl.MercatorCoordinate(a.x - dx, a.y - dy);
       
           map.on('click', (e) => {
+              disableRoute = true;
               if (e.originalEvent.altKey) {
                   if (!this.first) {
                       this.first = map.transform.pointCoordinate(e.point, map.style.terrain);
@@ -168,8 +170,9 @@
                   }
               }
           });
+
           map.flyTo(map.calculateCameraOptionsFromTo(camera.coord.toLngLat(), camera.altitude, coordinates[0]));
-          //   setTimeout(() => animate(), 2000);
+          setTimeout(() => animate(), 2000);
       });
 
    </script>
