--- a/test/debug-pages/debug.html
+++ b/test/debug-pages/debug.html
@@ -35,7 +35,7 @@ var map = window.map = new maplibregl.Map({
     container: 'map',
     zoom: 12.5,
     center: [-77.01866, 38.888],
-    style: 'https://demotiles.maplibre.org/style.json',
+    style: 'style.json',
     hash: true
 });
 
