--- a/test/bench/gl-stats.html
+++ b/test/bench/gl-stats.html
@@ -8,7 +8,7 @@
 let now = performance.now(); //eslint-disable-line prefer-const
 window.performance.now = () => now;
 </script>
-<script src="../dist/maplibre-gl.js"></script>
+<script src="/dist/maplibre-gl.js"></script>
 </head>
 <body style="margin: 0; padding: 0"><div id="map" style="width: 500px; height: 500px"></div></body>
 <script>
